Added javascript to increase site speed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
   <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
   <link rel="apple-touch-icon" href="{{site.baseurl}}/icons/000/favicons/android-icon-192x192.png">
   <link rel="shortcut icon" href="{{site.baseurl}}/icons/000/favicons/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Quicksand:300,400,700" rel="stylesheet">
 </head>
 <body>
 
@@ -27,7 +26,7 @@
       <div class="frame footer pad-b-2">
 
       <ul class="list-group-inline">
-        <li class="">
+        <li>
           <a class="block" href="https://www.facebook.com/Cecilz.On.Wheels">
             <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 233.3 233.3">
               <title>facebook</title>
@@ -36,8 +35,23 @@
           </a>
         </li>
 
-        <li class="">
-          <a class="block" href="http://cbleszynski.tumblr.com/">
+        <li>
+          <a class="block" href="https://www.facebook.com/Cecilz.On.Wheels">
+            <svg width="50" height="50" viewBox="0 0 234.6 234.6"><path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M58.7 228.3h-6.4A47.3 47.3 0 0 1 5 181V52.3A47.3 47.3 0 0 1 52.3 5H181a47.3 47.3 0 0 1 47.3 47.3V181a47.3 47.3 0 0 1-47.3 47.3H81.1"/><path d="M165.6 104.2c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm47.9 29.2a105.9 105.9 0 0 0-.8-16.5c-1.9-12-7.3-21.8-15.4-28.6a2.5 2.5 0 0 1-.3-3.6 9.8 9.8 0 0 0 2.6-6.7V64.1a10 10 0 0 0-10-10h-46.1a12.5 12.5 0 0 0-12.4 12.5V78a10.1 10.1 0 0 0 2.9 7.1 2.5 2.5 0 0 1-.1 3.6l-2.6 2.4h-.1a2.5 2.5 0 0 1-4.2-1.6 29.8 29.8 0 0 0-.9-7.3 33.2 33.2 0 0 0-13.2-19.8c-7.2-5.3-16.5-8-27.4-8.2h-46a12.5 12.5 0 0 0-12.4 12.5v98.9a12.5 12.5 0 0 0 12.4 12.5h42.4c20.6 0 33.8-7.9 41.1-17.9a2.3 2.3 0 0 1 3.9 0 39.2 39.2 0 0 0 5.3 5.9c8.6 7.9 20.3 12 34 12 11.6 0 22.1-3 30.3-8.8a39.3 39.3 0 0 0 14.6-18.7 10.8 10.8 0 0 0-.6-7.9l.4-2.7a10.6 10.6 0 0 0 2.6-6.6zM81.9 168.1H42.7a5.6 5.6 0 0 1-5.6-5.6V70.1a5.8 5.8 0 0 1 5.8-5.8h42.4c33.9.5 38.1 30.2 24.5 43.8a5 5 0 0 0 .5 7.5c17.6 13.7 14.3 52.5-28.4 52.5zm61.6-104h43.7a2.5 2.5 0 0 1 2.4 2.5v9a2.4 2.4 0 0 1-2.4 2.4h-43.7a2.4 2.4 0 0 1-2.4-2.4v-9a2.5 2.5 0 0 1 2.4-2.5zm57.5 69.2h-50.5a2.4 2.4 0 0 0-2.4 2.8c1.6 11.8 10.2 16.6 18.3 16.6 4.9 0 9.7-1.8 12.6-4.7a2.8 2.8 0 0 1 1.7-.7h17.1a2.4 2.4 0 0 1 2.2 3.6c-4.5 8.3-15.2 17.2-33.8 17.2-21.3 0-38.5-11.9-38.5-39.3s16.1-41 37.9-41 34.4 12.3 37.2 30.6a81.2 81.2 0 0 1 .7 12.4 2.5 2.5 0 0 1-2.5 2.5zm-35.4-29.1c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5z"/><path d="M81.1 147.5H60.9a3 3 0 0 1-3-3v-15a3 3 0 0 1 3-3h20.5c19.5 0 20.8 21-.3 21zm1.6-41.8H59.8a1.8 1.8 0 0 1-1.9-1.8V86.8a1.9 1.9 0 0 1 1.9-1.9h20.8c22.3 0 19.5 20.8 2.1 20.8z"/></svg>
+          </a>
+        </li>
+
+        <li>
+          <a class="block" href="https://www.facebook.com/Cecilz.On.Wheels">
+            <svg width="50" height="50" viewBox="0 0 234.6 234.6">
+              <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M58.7 228.3h-6.4A47.3 47.3 0 0 1 5 181V52.3A47.3 47.3 0 0 1 52.3 5H181a47.3 47.3 0 0 1 47.3 47.3V181a47.3 47.3 0 0 1-47.3 47.3H81.1"/><path d="M73.7 86.5v112.1H43.1V86.5h30.6m0-8H43.1a8 8 0 0 0-8 8v112.1a8 8 0 0 0 8 8h30.6a8 8 0 0 0 8-8V86.5a8 8 0 0 0-8-8z"/><path d="M58.4 37.6a18 18 0 1 1-17.8 18 17.9 17.9 0 0 1 17.8-18m0-8a26 26 0 1 0 25.8 26 25.9 25.9 0 0 0-25.8-26zm99.9 56.9c18.8 0 37.7 12.4 37.7 43.2v68.9h-30.6v-57.1c0-16.8-9.8-24.8-19.8-24.8s-21 8.6-21 24.8v57.1H94.1V86.5h30.5v6.9a4 4 0 0 0 4 3.9 3.9 3.9 0 0 0 2.6-1c7-6.2 17.1-9.8 27.1-9.8m0-8a50.3 50.3 0 0 0-25.7 7 8 8 0 0 0-8-7H94.1a8 8 0 0 0-8 8v112.1a8 8 0 0 0 8 8h30.5a8 8 0 0 0 8-8v-57.1c0-5.4 1.6-9.9 4.4-13a12.2 12.2 0 0 1 8.6-3.8c7.2 0 11.8 6.6 11.8 16.8v57.1a8 8 0 0 0 8 8H196a8 8 0 0 0 8-8v-68.9c0-16.3-4.9-29.7-14.2-38.8s-19.3-12.4-31.5-12.4z"/>
+            </svg>
+          </a>
+        </li>
+
+
+        <li>
+          <a class="block" href="https://www.instagram.com/cylkadrafts/?hl=en">
             <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 234.6 234.6">
               <title>insta</title>
               <path d="M42.4,75.2c-3.1,22.9-1.2,55.6-1.4,74.3S51.3,190.7,78.6,191s65.3,3.1,81.8.9c18.1-2.5,30-17.7,32-42.4s2.2-51.2.7-70.8-18-34.6-37.7-35.9-26.9-.6-43.1-.8-34.6-.6-46.8,3.8S44.4,61.5,42.4,75.2Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
@@ -48,16 +62,6 @@
           </a>
         </li>
 
-        <li class="">
-          <a class="block" href="https://www.instagram.com/ceciliableszynski/">
-            <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 233.3 233.3">
-              <title>twitter</title>
-              <path d="M154.5,58.5c7.5,0,14.7,2.8,21.2,8.3a7.5,7.5,0,0,0,4.8,2.1,7,7,0,0,0,2.7-.6L199,62.5c-2.2,7.2-12.4,17-12.3,17.3l15.9-3.9.7.5c-3.6,3.8-7,7.9-11,11.2s-4.6,5.8-4.7,10.2c-1.4,43.9-31.4,85.5-80.1,93.2a95,95,0,0,1-14.2,1c-18.2,0-37.5-4.8-49.8-13.1,7.7-1.3,16-2.1,24-3.9s15.3-5.9,22.7-11.9c-15.4-1.6-25.4-8.7-31.1-22.3l13.4-.9c.1-.4.1-.7.2-1.1-15.5-5-24.4-15.1-25.9-32l13.9,3.5.6-.9C47.2,97.3,43.3,83,51.2,65.1c18.6,21.4,41.5,33.1,69.6,35.1,0-3.7-.2-7.1,0-10.4,1-13.6,8-23.2,20.4-28.4a34.4,34.4,0,0,1,13.3-2.9m0-1a35.9,35.9,0,0,0-13.7,2.9c-12.7,5.4-20,15.5-21,29.3-.2,2.3-.1,4.6-.1,7a21.8,21.8,0,0,0,.1,2.5C92.6,96.9,70.4,85.6,51.9,64.4l-1-1.1-.6,1.4c-7.6,17.3-4.7,31.7,8.9,44.2l-4.6-1.2L47,105.9l-1.3-.4v1.4c1.4,16.1,9.4,26.6,24.5,32.1l-11.3.8H57.6l.5,1.3c5.6,13.3,15,20.5,29.6,22.7-6.9,5.3-13.5,8.6-20.4,10.2s-11.3,2.1-16.8,2.8l-7.1,1.1-2.5.4,2.1,1.4C55.1,187.9,74.4,193,93.3,193a95.8,95.8,0,0,0,14.4-1,92.7,92.7,0,0,0,58.4-33.4,101.6,101.6,0,0,0,22.5-60.8c.1-4.5,1.3-7,4.3-9.4a72.7,72.7,0,0,0,7.9-7.8c1-1.2,2.1-2.4,3.2-3.5l.8-.9-.9-.6-.7-.5-.4-.3h-.4l-3.8.9-9.1,2.3c3.2-3.6,8.8-10,10.5-15.3l.6-2-1.9.7-5.3,2-10.6,3.9a6.8,6.8,0,0,1-2.3.5,6.3,6.3,0,0,1-4.1-1.9c-6.8-5.6-14.2-8.5-21.9-8.5Z" />
-              <path d="M93.3,192.5c-18.8,0-38-5-50.1-13.2l-1-.7,1.2-.2,7.2-1.1c5.5-.8,11.2-1.6,16.8-2.8,7.3-1.7,14.2-5.2,21.6-11.1-15.1-1.9-24.8-9-30.4-22.5l-.3-.6,13.8-.9v-.2c-15.9-5.3-24.4-15.9-25.8-32.3v-.7l14.3,3.5v-.2C46.3,97,43,82.4,50.7,64.9l.3-.7.6.6c18.6,21.3,41.1,32.8,68.7,34.9,0-1-.1-2-.1-3s-.1-4.7.1-7c1-13.6,8.1-23.5,20.7-28.8A34.9,34.9,0,0,1,154.5,58c7.6,0,14.9,2.9,21.5,8.4,1.7,1.4,3,2,4.5,2a7.9,7.9,0,0,0,2.5-.5l16.8-6.3-.3,1c-1.7,5.6-8,12.5-11,15.8l-.5.6,14.7-3.7,1.4,1-.4.4-3.3,3.5a63.9,63.9,0,0,1-7.8,7.8c-3.6,2.8-4.4,5.9-4.5,9.8a100.9,100.9,0,0,1-22.4,60.5,92.9,92.9,0,0,1-58.1,33.2A94.4,94.4,0,0,1,93.3,192.5Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
-              <path d="M154.5,58.5c7.5,0,14.7,2.8,21.2,8.3a7.5,7.5,0,0,0,4.8,2.1,7,7,0,0,0,2.7-.6L199,62.5c-2.2,7.2-12.4,17-12.3,17.3l15.9-3.9.7.5c-3.6,3.8-7,7.9-11,11.2s-4.6,5.8-4.7,10.2c-1.4,43.9-31.4,85.5-80.1,93.2a95,95,0,0,1-14.2,1c-18.2,0-37.5-4.8-49.8-13.1,7.7-1.3,16-2.1,24-3.9s15.3-5.9,22.7-11.9c-15.4-1.6-25.4-8.7-31.1-22.3l13.4-.9c.1-.4.1-.7.2-1.1-15.5-5-24.4-15.1-25.9-32l13.9,3.5.6-.9C47.2,97.3,43.3,83,51.2,65.1c18.6,21.4,41.5,33.1,69.6,35.1,0-3.7-.2-7.1,0-10.4,1-13.6,8-23.2,20.4-28.4a34.4,34.4,0,0,1,13.3-2.9m0-1a35.9,35.9,0,0,0-13.7,2.9c-12.7,5.4-20,15.5-21,29.3-.2,2.3-.1,4.6-.1,7a21.8,21.8,0,0,0,.1,2.5C92.6,96.9,70.4,85.6,51.9,64.4l-1-1.1-.6,1.4c-7.6,17.3-4.7,31.7,8.9,44.2l-4.6-1.2L47,105.9l-1.3-.4v1.4c1.4,16.1,9.4,26.6,24.5,32.1l-11.3.8H57.6l.5,1.3c5.6,13.3,15,20.5,29.6,22.7-6.9,5.3-13.5,8.6-20.4,10.2s-11.3,2.1-16.8,2.8l-7.1,1.1-2.5.4,2.1,1.4C55.1,187.9,74.4,193,93.3,193a95.8,95.8,0,0,0,14.4-1,92.7,92.7,0,0,0,58.4-33.4,101.6,101.6,0,0,0,22.5-60.8c.1-4.5,1.3-7,4.3-9.4a72.7,72.7,0,0,0,7.9-7.8c1-1.2,2.1-2.4,3.2-3.5l.8-.9-.9-.6-.7-.5-.4-.3h-.4l-3.8.9-9.1,2.3c3.2-3.6,8.8-10,10.5-15.3l.6-2-1.9.7-5.3,2-10.6,3.9a6.8,6.8,0,0,1-2.3.5,6.3,6.3,0,0,1-4.1-1.9c-6.8-5.6-14.2-8.5-21.9-8.5Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/><path d="M58.7,228.3H52.3A47.3,47.3,0,0,1,5,181V52.3A47.3,47.3,0,0,1,52.3,5H181a47.3,47.3,0,0,1,47.3,47.3V181A47.3,47.3,0,0,1,181,228.3H81.1" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
-            </svg>
-          </a>
-        </li>
       </ul>
     </div>
 
@@ -84,7 +88,60 @@
   </div>
 </div>
 
+<script>
+  (function(){'use strict';var f,g=[];function l(a){g.push(a);1==g.length&&f()}function m(){for(;g.length;)g[0](),g.shift()}f=function(){setTimeout(m)};function n(a){this.a=p;this.b=void 0;this.f=[];var b=this;try{a(function(a){q(b,a)},function(a){r(b,a)})}catch(c){r(b,c)}}var p=2;function t(a){return new n(function(b,c){c(a)})}function u(a){return new n(function(b){b(a)})}function q(a,b){if(a.a==p){if(b==a)throw new TypeError;var c=!1;try{var d=b&&b.then;if(null!=b&&"object"==typeof b&&"function"==typeof d){d.call(b,function(b){c||q(a,b);c=!0},function(b){c||r(a,b);c=!0});return}}catch(e){c||r(a,e);return}a.a=0;a.b=b;v(a)}}
+  function r(a,b){if(a.a==p){if(b==a)throw new TypeError;a.a=1;a.b=b;v(a)}}function v(a){l(function(){if(a.a!=p)for(;a.f.length;){var b=a.f.shift(),c=b[0],d=b[1],e=b[2],b=b[3];try{0==a.a?"function"==typeof c?e(c.call(void 0,a.b)):e(a.b):1==a.a&&("function"==typeof d?e(d.call(void 0,a.b)):b(a.b))}catch(h){b(h)}}})}n.prototype.g=function(a){return this.c(void 0,a)};n.prototype.c=function(a,b){var c=this;return new n(function(d,e){c.f.push([a,b,d,e]);v(c)})};
+  function w(a){return new n(function(b,c){function d(c){return function(d){h[c]=d;e+=1;e==a.length&&b(h)}}var e=0,h=[];0==a.length&&b(h);for(var k=0;k<a.length;k+=1)u(a[k]).c(d(k),c)})}function x(a){return new n(function(b,c){for(var d=0;d<a.length;d+=1)u(a[d]).c(b,c)})};window.Promise||(window.Promise=n,window.Promise.resolve=u,window.Promise.reject=t,window.Promise.race=x,window.Promise.all=w,window.Promise.prototype.then=n.prototype.c,window.Promise.prototype["catch"]=n.prototype.g);}());
 
+  (function(){function l(a,b){document.addEventListener?a.addEventListener("scroll",b,!1):a.attachEvent("scroll",b)}function m(a){document.body?a():document.addEventListener?document.addEventListener("DOMContentLoaded",function c(){document.removeEventListener("DOMContentLoaded",c);a()}):document.attachEvent("onreadystatechange",function k(){if("interactive"==document.readyState||"complete"==document.readyState)document.detachEvent("onreadystatechange",k),a()})};function r(a){this.a=document.createElement("div");this.a.setAttribute("aria-hidden","true");this.a.appendChild(document.createTextNode(a));this.b=document.createElement("span");this.c=document.createElement("span");this.h=document.createElement("span");this.f=document.createElement("span");this.g=-1;this.b.style.cssText="max-width:none;display:inline-block;position:absolute;height:100%;width:100%;overflow:scroll;font-size:16px;";this.c.style.cssText="max-width:none;display:inline-block;position:absolute;height:100%;width:100%;overflow:scroll;font-size:16px;";
+  this.f.style.cssText="max-width:none;display:inline-block;position:absolute;height:100%;width:100%;overflow:scroll;font-size:16px;";this.h.style.cssText="display:inline-block;width:200%;height:200%;font-size:16px;max-width:none;";this.b.appendChild(this.h);this.c.appendChild(this.f);this.a.appendChild(this.b);this.a.appendChild(this.c)}
+  function t(a,b){a.a.style.cssText="max-width:none;min-width:20px;min-height:20px;display:inline-block;overflow:hidden;position:absolute;width:auto;margin:0;padding:0;top:-999px;white-space:nowrap;font-synthesis:none;font:"+b+";"}function y(a){var b=a.a.offsetWidth,c=b+100;a.f.style.width=c+"px";a.c.scrollLeft=c;a.b.scrollLeft=a.b.scrollWidth+100;return a.g!==b?(a.g=b,!0):!1}function z(a,b){function c(){var a=k;y(a)&&a.a.parentNode&&b(a.g)}var k=a;l(a.b,c);l(a.c,c);y(a)};function A(a,b){var c=b||{};this.family=a;this.style=c.style||"normal";this.weight=c.weight||"normal";this.stretch=c.stretch||"normal"}var B=null,C=null,E=null,F=null;function G(){if(null===C)if(J()&&/Apple/.test(window.navigator.vendor)){var a=/AppleWebKit\/([0-9]+)(?:\.([0-9]+))(?:\.([0-9]+))/.exec(window.navigator.userAgent);C=!!a&&603>parseInt(a[1],10)}else C=!1;return C}function J(){null===F&&(F=!!document.fonts);return F}
+  function K(){if(null===E){var a=document.createElement("div");try{a.style.font="condensed 100px sans-serif"}catch(b){}E=""!==a.style.font}return E}function L(a,b){return[a.style,a.weight,K()?a.stretch:"","100px",b].join(" ")}
+  A.prototype.load=function(a,b){var c=this,k=a||"BESbswy",q=0,D=b||3E3,H=(new Date).getTime();return new Promise(function(a,b){if(J()&&!G()){var M=new Promise(function(a,b){function e(){(new Date).getTime()-H>=D?b():document.fonts.load(L(c,'"'+c.family+'"'),k).then(function(c){1<=c.length?a():setTimeout(e,25)},function(){b()})}e()}),N=new Promise(function(a,c){q=setTimeout(c,D)});Promise.race([N,M]).then(function(){clearTimeout(q);a(c)},function(){b(c)})}else m(function(){function u(){var b;if(b=-1!=
+  f&&-1!=g||-1!=f&&-1!=h||-1!=g&&-1!=h)(b=f!=g&&f!=h&&g!=h)||(null===B&&(b=/AppleWebKit\/([0-9]+)(?:\.([0-9]+))/.exec(window.navigator.userAgent),B=!!b&&(536>parseInt(b[1],10)||536===parseInt(b[1],10)&&11>=parseInt(b[2],10))),b=B&&(f==v&&g==v&&h==v||f==w&&g==w&&h==w||f==x&&g==x&&h==x)),b=!b;b&&(d.parentNode&&d.parentNode.removeChild(d),clearTimeout(q),a(c))}function I(){if((new Date).getTime()-H>=D)d.parentNode&&d.parentNode.removeChild(d),b(c);else{var a=document.hidden;if(!0===a||void 0===a)f=e.a.offsetWidth,
+  g=n.a.offsetWidth,h=p.a.offsetWidth,u();q=setTimeout(I,50)}}var e=new r(k),n=new r(k),p=new r(k),f=-1,g=-1,h=-1,v=-1,w=-1,x=-1,d=document.createElement("div");d.dir="ltr";t(e,L(c,"sans-serif"));t(n,L(c,"serif"));t(p,L(c,"monospace"));d.appendChild(e.a);d.appendChild(n.a);d.appendChild(p.a);document.body.appendChild(d);v=e.a.offsetWidth;w=n.a.offsetWidth;x=p.a.offsetWidth;I();z(e,function(a){f=a;u()});t(e,L(c,'"'+c.family+'",sans-serif'));z(n,function(a){g=a;u()});t(n,L(c,'"'+c.family+'",serif'));
+  z(p,function(a){h=a;u()});t(p,L(c,'"'+c.family+'",monospace'))})})};"object"===typeof module?module.exports=A:(window.FontFaceObserver=A,window.FontFaceObserver.prototype.load=A.prototype.load);}());
+  </script>
+
+  <script>
+    var QuicksandRegular, QuicksandLight, QuicksandBold, LatoRegular, LatoBold;
+
+    if (!sessionStorage.fontsLoaded) {
+    QuicksandRegular = new FontFaceObserver('Quicksand', {
+      weight: 'normal'
+    });
+
+    QuicksandLight = new FontFaceObserver('Quicksand', {
+      weight: 'normal'
+    });
+
+    QuicksandBold = new FontFaceObserver('Quicksand', {
+      weight: 'bold'
+    });
+
+    LatoRegular = new FontFaceObserver('Lato', {
+      weight: 'normal'
+    });
+
+    LatoBold = new FontFaceObserver('Lato', {
+      weight: 'bold'
+    });
+
+    Promise.all([
+      QuicksandRegular.check(),
+      QuicksandLight.check(),
+      QuicksandBold.check(),
+      LatoRegular.check(),
+      LatoBold.check(),
+    ]).then(function () {
+      document.documentElement.className += ' fonts-loaded';
+      sessionStorage.fontsLoaded = true;
+    });
+  } else {
+    document.documentElement.className += 'fonts-loaded';
+  }
+
+  </script>
 
 </body>
 </html>
