--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a:hover {
 }
 
 .nav a:hover {
-  background-color: transparent;
+  background-color: var(--color-primary)
   text-shadow: 1px 1px 17px rgba(250,250,250,1);
 }
 
