--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -35,8 +35,8 @@
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
 
-  <div class="nav hover bracket gutter-1-2 fade" style="text-align:center">
-    <a class="btn micro" href="{{site.baseurl}}/gallery">Full Gallery</a>
+  <div class="clickable hover bracket gutter-1-2 fade" style="text-align:center">
+    <a class="btn giga" href="{{site.baseurl}}/gallery">Full Gallery</a>
   </div>
 </div>
 
