--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,16 @@ a:hover {
   color: #fff;
 }
 
+.clickable {
+  margin-top: 2rem;
+  font-variant-caps: all-small-caps;
+}
+
+.clickable a:hover {
+  background-color: rgba(250,250,250,0);
+  text-shadow: 1px 1px 17px rgba(250,250,250,1);
+}
+
 .nav {
   position: relative;
   z-index: 2;
@@ -48,7 +58,7 @@ a:hover {
 }
 
 .nav a:hover {
-  background-color: var(--color-primary)
+  background-color: rgba(250,250,250,0);
   text-shadow: 1px 1px 17px rgba(250,250,250,1);
 }
 
