added SEO stuff!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Cecilia Bleszynski Portfolio</title>
+  <title>Cecilia Bleszynski Graphic Design Portfolio - Motion, Illustration, and Branding</title>
+  <meta name="description" content="The various visual works of Cecilia Bleszynski. Come by and have a look!">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#ffffff">
   <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
