--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,3 +1,8 @@
+<div class="text-center">
+  <h1>Cylka Designs</h1>
+  <p>Welcome to my portfolio! Feel free to have a look around.</p>
+</div>
+
 <div class="pad-b-2 pad-t-2 ">
   <div class="slideshow-container">
     <div class="mySlides fade">
