started work on splash page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<ul class="list-group-inline pin-tc unit top-bracket nav [ xs-1 s-1 m-1 l-1 ]">
+<ul class="list-group-inline pin-tc unit nav [ xs-1 s-1 m-1 l-1 ]">
     <li class="w-1">
       <div>
         <a href="{{site.baseurl}}/gallery">
