--- a/css/main.css
+++ b/css/main.css
@@ -133,9 +133,6 @@ li a:hover {
 }
 
 .footer {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, .1));
-  border: none;
-  border-radius: 0px 0px 40px 40px;
   padding-top: 1em;
   padding-bottom: .1rem;
 
@@ -165,6 +162,22 @@ li a:hover {
 #copyright {
   color: #f09999;
 }
+
+.soft-bg {
+  background-color: var(--color-background);
+
+    box-shadow:
+      0 0 40px 20px #333,
+      0 0 100px 60px #333; /* middle magenta */
+}
+
+.gif_bg {
+  background-image: url("https://media.giphy.com/media/xULW8sF2XwXlIPCCli/giphy.gif");
+  background-repeat: repeat;
+}
+
+
+
 @media only screen and (min-width: 25em) {
 
 
