--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -12,7 +12,13 @@
       <div class="gradient" style="width:100%">
         <div class="text">Daily Dino News</div>
       </div>
+    </div>
 
+    <div class="mySlides fade">
+      <a href="{{site.baseurl}}/design/motion/2018/03/19/motion_reel/" >
+        <img src="images/carosel/Motion_preview.png" style="width:100%">
+      </a>
+      <div class="text">Motion Reel</div>
     </div>
 
     <div class="mySlides fade">
@@ -28,7 +34,7 @@
         </a>
       <div class="text">Love Buds</div>
     </div>
-    <div class="hover fade">
+    <div class="hover fade hidden">
       <a class="prev" onclick="plusSlides(-1)"><svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="20.1" height="46.1" viewBox="0 0 25.1 51.5"><path d="M20.1,5S5,9.5,5,25.4,20.1,46.5,20.1,46.5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/></svg></a>
       <a class="next" onclick="plusSlides(1)"><svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="20.1" height="46.1" viewBox="0 0 25.1 51.5"><path d="M5,5S20.1,9.5,20.1,25.4,5,46.5,5,46.5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/></svg></a>
     </div>
@@ -38,6 +44,7 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
   </div>
 
   <div class="clickable hover bracket gutter-1-2 fade" style="text-align:center">
