No more siezure BG

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,13 @@
 
   <article itemscope itemtype="http://schema.org/Person" class="wrapper">
 
-    <section class="soft-bg frame pad-b-2">
+    <section class="frame pad-b-2">
       <main class="pad-t relative">
         {{content}}
       </main>
 
 
-    <div class="soft-bg pad-t-2 pin-b-c">
+    <div class="pad-t-2 pin-b-c">
       <div class="frame footer pad-b-2">
         <ul class="list-group-inline">
           <li>
