Added some Youi projects, updated social icons

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,6 +1,6 @@
 <div class="text-center">
-  <h1>Cylka Designs</h1>
-  <p>Welcome to my portfolio! Feel free to have a look around.</p>
+  <h1>Portfolio of<br> Cecilia Bleszynski</h1>
+  <p>Feel free to have a look around!</p>
 </div>
 
 <div class="pad-b-2 pad-t-2 ">
