--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,39 +25,31 @@
       <div class="frame footer pad-b-2">
         <ul class="list-group-inline">
           <li>
-            <a class="block" href="https://www.facebook.com/Cecilz.On.Wheels">
-              <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 233.3 233.3">
-                <title>facebook</title>
-                <path d="M58.7,228.3H52.3A47.3,47.3,0,0,1,5,181V52.3A47.3,47.3,0,0,1,52.3,5H181a47.3,47.3,0,0,1,47.3,47.3V181A47.3,47.3,0,0,1,181,228.3H154.4V156.1l28.6-1,3.2-35-31.8,1V106.3c0-9.5,2-15.8,11.6-17.9s22.3-.1,22.3-.1V49.1s-25.5,0-42.4,1S114.1,62.9,112,80.9s-3.2,39.2-3.2,39.2H89.7v38.1h20.1v68.9H89" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
-              </svg>
+            <a class="block" href="https://dribbble.com/Cylka">
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Dribbble.svg" width="50" height="50"">
+              <title>Dribbble</title>
             </a>
           </li>
 
           <li>
-            <a class="block" href="https://www.behance.net/cylkadesign">
-              <svg width="50" height="50" viewBox="0 0 234.6 234.6"><path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M58.7 228.3h-6.4A47.3 47.3 0 0 1 5 181V52.3A47.3 47.3 0 0 1 52.3 5H181a47.3 47.3 0 0 1 47.3 47.3V181a47.3 47.3 0 0 1-47.3 47.3H81.1"/><path d="M165.6 104.2c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm0 0c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5zm47.9 29.2a105.9 105.9 0 0 0-.8-16.5c-1.9-12-7.3-21.8-15.4-28.6a2.5 2.5 0 0 1-.3-3.6 9.8 9.8 0 0 0 2.6-6.7V64.1a10 10 0 0 0-10-10h-46.1a12.5 12.5 0 0 0-12.4 12.5V78a10.1 10.1 0 0 0 2.9 7.1 2.5 2.5 0 0 1-.1 3.6l-2.6 2.4h-.1a2.5 2.5 0 0 1-4.2-1.6 29.8 29.8 0 0 0-.9-7.3 33.2 33.2 0 0 0-13.2-19.8c-7.2-5.3-16.5-8-27.4-8.2h-46a12.5 12.5 0 0 0-12.4 12.5v98.9a12.5 12.5 0 0 0 12.4 12.5h42.4c20.6 0 33.8-7.9 41.1-17.9a2.3 2.3 0 0 1 3.9 0 39.2 39.2 0 0 0 5.3 5.9c8.6 7.9 20.3 12 34 12 11.6 0 22.1-3 30.3-8.8a39.3 39.3 0 0 0 14.6-18.7 10.8 10.8 0 0 0-.6-7.9l.4-2.7a10.6 10.6 0 0 0 2.6-6.6zM81.9 168.1H42.7a5.6 5.6 0 0 1-5.6-5.6V70.1a5.8 5.8 0 0 1 5.8-5.8h42.4c33.9.5 38.1 30.2 24.5 43.8a5 5 0 0 0 .5 7.5c17.6 13.7 14.3 52.5-28.4 52.5zm61.6-104h43.7a2.5 2.5 0 0 1 2.4 2.5v9a2.4 2.4 0 0 1-2.4 2.4h-43.7a2.4 2.4 0 0 1-2.4-2.4v-9a2.5 2.5 0 0 1 2.4-2.5zm57.5 69.2h-50.5a2.4 2.4 0 0 0-2.4 2.8c1.6 11.8 10.2 16.6 18.3 16.6 4.9 0 9.7-1.8 12.6-4.7a2.8 2.8 0 0 1 1.7-.7h17.1a2.4 2.4 0 0 1 2.2 3.6c-4.5 8.3-15.2 17.2-33.8 17.2-21.3 0-38.5-11.9-38.5-39.3s16.1-41 37.9-41 34.4 12.3 37.2 30.6a81.2 81.2 0 0 1 .7 12.4 2.5 2.5 0 0 1-2.5 2.5zm-35.4-29.1c-9.1 0-14.6 4.3-16.7 12.3a2.5 2.5 0 0 0 2.4 3.1h28.6a2.5 2.5 0 0 0 2.5-2.9c-1.8-8.7-8.4-12.5-16.8-12.5z"/><path d="M81.1 147.5H60.9a3 3 0 0 1-3-3v-15a3 3 0 0 1 3-3h20.5c19.5 0 20.8 21-.3 21zm1.6-41.8H59.8a1.8 1.8 0 0 1-1.9-1.8V86.8a1.9 1.9 0 0 1 1.9-1.9h20.8c22.3 0 19.5 20.8 2.1 20.8z"/></svg>
+            <a class="block" href="https://www.instagram.com/cylkadrafts/?hl=en">
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Instagram.svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <title>Instagram</title>
             </a>
           </li>
 
           <li>
             <a class="block" href="https://www.linkedin.com/in/cecilia-bleszynski-48b48510a/">
-              <svg width="50" height="50" viewBox="0 0 234.6 234.6">
-                <title>LinkedIn</title>
-                <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M58.7 228.3h-6.4A47.3 47.3 0 0 1 5 181V52.3A47.3 47.3 0 0 1 52.3 5H181a47.3 47.3 0 0 1 47.3 47.3V181a47.3 47.3 0 0 1-47.3 47.3H81.1"/><path d="M73.7 86.5v112.1H43.1V86.5h30.6m0-8H43.1a8 8 0 0 0-8 8v112.1a8 8 0 0 0 8 8h30.6a8 8 0 0 0 8-8V86.5a8 8 0 0 0-8-8z"/><path d="M58.4 37.6a18 18 0 1 1-17.8 18 17.9 17.9 0 0 1 17.8-18m0-8a26 26 0 1 0 25.8 26 25.9 25.9 0 0 0-25.8-26zm99.9 56.9c18.8 0 37.7 12.4 37.7 43.2v68.9h-30.6v-57.1c0-16.8-9.8-24.8-19.8-24.8s-21 8.6-21 24.8v57.1H94.1V86.5h30.5v6.9a4 4 0 0 0 4 3.9 3.9 3.9 0 0 0 2.6-1c7-6.2 17.1-9.8 27.1-9.8m0-8a50.3 50.3 0 0 0-25.7 7 8 8 0 0 0-8-7H94.1a8 8 0 0 0-8 8v112.1a8 8 0 0 0 8 8h30.5a8 8 0 0 0 8-8v-57.1c0-5.4 1.6-9.9 4.4-13a12.2 12.2 0 0 1 8.6-3.8c7.2 0 11.8 6.6 11.8 16.8v57.1a8 8 0 0 0 8 8H196a8 8 0 0 0 8-8v-68.9c0-16.3-4.9-29.7-14.2-38.8s-19.3-12.4-31.5-12.4z"/>
-              </svg>
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/LinkedIn.svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <title>LinkedIn</title>
             </a>
           </li>
 
 
           <li>
-            <a class="block" href="https://www.instagram.com/cylkadrafts/?hl=en">
-              <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 234.6 234.6">
-                <title>insta</title>
-                <path d="M42.4,75.2c-3.1,22.9-1.2,55.6-1.4,74.3S51.3,190.7,78.6,191s65.3,3.1,81.8.9c18.1-2.5,30-17.7,32-42.4s2.2-51.2.7-70.8-18-34.6-37.7-35.9-26.9-.6-43.1-.8-34.6-.6-46.8,3.8S44.4,61.5,42.4,75.2Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
-                <path d="M58.2,228.4H51.8A47.3,47.3,0,0,1,5,180.5L6.3,51.8A47.3,47.3,0,0,1,54.1,5L182.8,6.3a47.3,47.3,0,0,1,46.8,47.8l-1.3,128.7a47.3,47.3,0,0,1-47.8,46.8l-99.9-1" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
-                <circle cx="117.3" cy="117.3" r="34.9" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/>
-                <circle cx="161.1" cy="73.6" r="10" fill="#fff" stroke="none"/>
-              </svg>
+            <a class="block" href="https://www.behance.net/cylkadesign/projects">
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Behance.svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <title>Behance</title>
             </a>
           </li>
         </ul>
