linkedin icon error fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
           <li>
             <a class="block" href="https://www.linkedin.com/in/cecilia-bleszynski-48b48510a/">
-              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/LinkedIn.svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Linkedin.svg" width="50" height="50" viewBox="0 0 233.3 233.3">
               <title>LinkedIn</title>
             </a>
           </li>
