Updated email link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           </li>
         </ul>
         <div class="">
-          <a class="w-1 btn clickable text-center" itemprop="email" href="mailto:hello@cylka.ca">hello@cylka.ca</a>
+          <a class="w-1 btn clickable text-center" itemprop="email" href="mailto:design@cylka.ca">design@cylka.ca</a>
         </div>
 
         <svg class="island" id="copyright" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0 0 1197.2 102.6">
