added updated copy

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -6,11 +6,11 @@
 <div class="pad-b-2 pad-t-2 ">
   <div class="slideshow-container">
     <div class="mySlides fade">
-        <a href="{{site.baseurl}}/illustration/design/motion/2018/01/10/daily_dino_news" >
-          <img src="images/carosel/DDN_preview.png" style="width:100%">
+        <a href="{{site.baseurl}}/design/motion/2018/06/15/LocalNow-Player-Motion-Design/" >
+          <img src="images/carosel/LocalNow_preview.png" style="width:100%">
         </a>
       <div class="gradient" style="width:100%">
-        <div class="text">Daily Dino News</div>
+        <div class="text">LocalNow</div>
       </div>
     </div>
 
