--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <ul class="list-group-inline">
           <li>
             <a class="block" href="https://dribbble.com/Cylka">
-              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Dribbble.svg" width="50" height="50"">
+              <img id="copyright"  class="relative" src="{{site.baseurl}}/images/icons/Dribbble.svg" width="50" height="50">
               <title>Dribbble</title>
             </a>
           </li>
@@ -58,23 +58,101 @@
         </div>
 
         <svg class="island" id="copyright" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0 0 1197.2 102.6">
-          <title>copyright2018</title>
-            <path d="M69.3,43.7A34.7,34.7,0,1,1,35.2,8.8C53.8,8.8,69.3,24.6,69.3,43.7Zm-61.8,0c0,15.4,12.3,28,27.3,28s27.1-12.6,27.1-28S49.8,15.6,35.2,15.6,7.5,27.9,7.5,43.7ZM49.1,29.8a3.9,3.9,0,0,1-4,4.1,9.3,9.3,0,0,1-3.4-.9,11.4,11.4,0,0,0-4.6-.9c-6.1,0-9.6,4.2-9.6,11.4s3.6,11.1,9.7,11.1c2.2,0,2.2,0,6.2-1.7a5.8,5.8,0,0,1,2.1-.5,4.1,4.1,0,0,1,4,4.3c0,3.8-5.2,6.6-12.3,6.6-12,0-20-8-20-20.1S25.4,23.4,37,23.4C44.3,23.4,49.1,26,49.1,29.8Z" fill="#555"/>
-            <path d="M164.4,19.4c0,4-2.6,6.8-6.2,6.8-1.5,0-2.5-.3-5.6-1.6a18.3,18.3,0,0,0-8-1.7c-10.5,0-16.8,7.8-16.8,20.9s6.3,20.6,16.9,20.6c3.8,0,3.8,0,10.6-3.1a9.3,9.3,0,0,1,3.4-.8c3.4,0,6.2,3.2,6.2,7,0,6.5-8.5,11.2-20.2,11.2-20.1,0-33.3-14-33.3-35.3S125,8.6,144.5,8.6C156.4,8.6,164.4,13,164.4,19.4Z" fill="#555"/>
-            <path d="M187.9,56.5c2.2,5.9,5.9,8.7,11.7,8.7,3.5,0,4.4-.3,12.1-4.1a8.3,8.3,0,0,1,3.2-.7,6.3,6.3,0,0,1,5.9,6c0,6-10.7,11.6-22,11.6-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1,24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8Zm19.3-10a15.9,15.9,0,0,0-2.1-5.4,9.1,9.1,0,0,0-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2Z" fill="#555"/>
-            <path d="M267.8,28.3a7.8,7.8,0,0,1,4.1,6.7c0,3.6-2.6,6.6-5.8,6.6-1.3,0-1.7-.1-5.3-1.5a14.3,14.3,0,0,0-5.3-1.1c-6.3,0-10.8,5.3-10.8,12.7s4.5,12.6,11.2,12.6a14.5,14.5,0,0,0,5.8-1.4c2.5-1.2,2.9-1.3,4.2-1.3,3.4,0,6.1,2.9,6.1,6.7a7.1,7.1,0,0,1-2.8,5.4c-3.5,2.6-9.2,4.3-14.7,4.3a23.3,23.3,0,0,1-17.8-7.6C232,65.3,230,59.7,230,51.5s2.7-15,7.6-19.4a26.7,26.7,0,0,1,17.5-6.8A27.4,27.4,0,0,1,267.8,28.3Z" fill="#555"/>
-            <path d="M300.4,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#555"/>
-            <path d="M328.7,67.9c0,3.5-.1,4.4-1,6.1A7.3,7.3,0,0,1,315,74c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6a7.2,7.2,0,0,1,6.4-3.7,7.3,7.3,0,0,1,6.3,3.6c.9,1.7,1,2.5,1,6.1Z" fill="#555"/>
-            <path d="M359.4,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#555"/>
-            <path d="M420.5,69c0,5.2-3,8.7-7.4,8.7s-5.9-1.9-7.4-5.8C402,76.5,399,78,393.6,78a21.5,21.5,0,0,1-14.5-5.6q-8.7-7.7-8.7-21c0-8.1,2.4-14.2,7.7-19.4a21.3,21.3,0,0,1,15.3-6.7c5.2,0,8.3,1.5,12.5,5.8,1.6-3.9,3.8-5.5,7.3-5.5a7.3,7.3,0,0,1,7.3,7.5ZM385.1,51.5c0,7.7,4,12.8,10.2,12.8s10.1-5.2,10.1-12.7S401.3,39,395.2,39,385.1,44.1,385.1,51.5Z" fill="#555"/><path d="M489.3,10.3c6.4,0,10.3,1.2,13.8,4.2A16.2,16.2,0,0,1,508.7,27c0,6.1-2.2,9.8-7.9,13.3,4.2,1.2,6.1,2.2,8.4,4.2a16.3,16.3,0,0,1,5.4,12.7c0,11.2-8.9,19.8-20.5,19.8H475.9c-8,.4-11.5-3.1-11.1-11.1V21.4c0-4.7.3-5.9,1.6-7.7s4.1-3.4,7.6-3.4h15.3Zm-1.6,25.4a6.2,6.2,0,0,0,6.5-6.4c0-3.3-3-5.7-7.1-5.7h-7V35.7Zm3,28c3.4,0,4.9-.5,6.3-2.2a7.2,7.2,0,0,0,1.7-4.8c0-4.9-2.8-7.3-8.4-7.3H480.1V63.7Z" fill="#555"/><path d="M540.5,67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6a7.2,7.2,0,0,1,6.4-3.7,7.3,7.3,0,0,1,6.3,3.6c.9,1.7,1,2.5,1,6.1Z" fill="#555"/>
-            <path d="M567.3,56.5c2.2,5.9,5.9,8.7,11.7,8.7,3.5,0,4.4-.3,12.1-4.1a8.3,8.3,0,0,1,3.2-.7,6.3,6.3,0,0,1,5.9,6c0,6-10.7,11.6-22,11.6-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1,24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8Zm19.3-10a15.9,15.9,0,0,0-2.1-5.4,9.1,9.1,0,0,0-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2Z" fill="#555"/>
-            <path d="M646.9,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2a14.2,14.2,0,0,0-5.6-1.5c-2.4,0-3.9,1-3.9,2.6s.8,2.4,7.7,5.1,8.6,3.8,11.2,6.4a13.3,13.3,0,0,1,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4-10,0-18.8-5-18.8-10.6,0-3.4,3-6.6,6.1-6.6s1.7,0,7.6,2.6a14.5,14.5,0,0,0,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6c0-9.1,8.1-15.9,18.9-15.9C639.1,25.3,646.9,30,646.9,35.4Z" fill="#555"/><path d="M691.3,63.7c3.2,0,4,.1,5.6.9a6.6,6.6,0,0,1,3.3,5.7,6.8,6.8,0,0,1-3.3,5.8c-1.6.8-2.3.9-5.6.9H663c-5.1,0-7.6-1.7-7.6-5a7,7,0,0,1,1.7-4.4l20.5-28H664.4c-3.2,0-4-.1-5.5-.9a6.6,6.6,0,0,1-3.4-5.8,6.7,6.7,0,0,1,3.3-5.7c1.6-.8,2.3-.9,5.6-.9h28.3c3.4,0,6,2.3,6,5.3a8.9,8.9,0,0,1-2,5.1l-19.8,27Z" fill="#555"/>
-            <path d="M738.9,32.6c2-5.2,4-7,7.8-7a7.4,7.4,0,0,1,7.5,7.1c0,1.8-.2,2.4-1.5,5.6L730.4,91.7c-2.2,5.1-4,6.7-7.8,6.7a7.3,7.3,0,0,1-7.3-7c0-1.7.2-2.3,1.5-5.5l5.8-13.5L708.1,38.1c-1.3-3-1.5-3.8-1.5-5.5a7.3,7.3,0,0,1,7.4-7c3.7,0,5.6,1.7,7.7,6.9l8.6,21.8Z" fill="#555"/>
-            <path d="M764.6,34.2c0-5.2,3-8.6,7.5-8.6s5.4,1.5,6.8,5.1c4.3-4,7.8-5.4,13.5-5.4a19.1,19.1,0,0,1,12.8,4.4c3.9,3.5,5.3,7.1,5.3,14.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V47.3c0-5.7-3.2-9.3-8.2-9.3a8.4,8.4,0,0,0-8.3,8.7V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#555"/>
-            <path d="M859.6,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2a14.2,14.2,0,0,0-5.6-1.5c-2.4,0-3.9,1-3.9,2.6s.8,2.4,7.7,5.1,8.6,3.8,11.2,6.4a13.3,13.3,0,0,1,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4-10,0-18.8-5-18.8-10.6,0-3.4,3-6.6,6.1-6.6s1.7,0,7.6,2.6a14.5,14.5,0,0,0,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6c0-9.1,8.1-15.9,18.9-15.9C851.8,25.3,859.6,30,859.6,35.4Z" fill="#555"/><path d="M887.1,67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V42.9l13.5-13.8c2.9-3,4.4-3.8,6.7-3.8a7.2,7.2,0,0,1,7.2,7.3c0,2.2-.9,3.7-4,6.6L901.4,48l12.8,15.9c2.5,3.1,3.2,4.5,3.2,6.5a7.4,7.4,0,0,1-7.5,7.3c-2.7,0-4.3-1.1-7.1-4.7L887.1,52.9Z" fill="#555"/>
-            <path d="M943.9,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#555"/>
-            <path d="M1023.3,63.5c3.2,0,4,.1,5.5.9a6.6,6.6,0,0,1,3.4,5.8,6.8,6.8,0,0,1-3.3,5.9c-1.6.8-2.3.9-5.6.9H994.6c-3.6,0-5.2-.5-6.7-2.1a6,6,0,0,1-1.8-4.3c0-2.4,1-4.1,4.1-7.5s16.7-19,18.9-21.8c4.4-5.8,6-9,6-12.2a6.4,6.4,0,0,0-6.4-6.6c-3.5,0-6.1,2.4-7.3,6.8s-1.6,5.5-2.7,6.6a5.6,5.6,0,0,1-4.6,1.9c-4.2,0-7-3-7-7.5,0-11.7,10.3-21.7,22.5-21.7s21.2,8.7,21.2,20.2c0,6.8-2.3,12.1-8.7,20a171.1,171.1,0,0,1-13.3,14.7Z" fill="#555"/><path d="M1094.2,43.6c0,20.3-10.4,35.1-24.7,35.1a22.6,22.6,0,0,1-16.4-7.8c-5.6-6.5-8.2-15.2-8.2-27.8s2.8-20.5,8.2-26.7,10.5-7.8,16.3-7.8C1083.8,8.6,1094.2,23.3,1094.2,43.6Zm-33.6-.2c0,12.8,3.3,20.3,9,20.3s8.9-8.4,8.9-20.1-3.7-20-8.9-20S1060.6,31.1,1060.6,43.4Z" fill="#555"/>
-            <path d="M1112.8,23.8c-3.2,0-4-.2-5.5-.9a6.7,6.7,0,0,1,0-11.7c1.5-.8,2.2-.9,5.5-.9h8.6c7.1-.4,10.2,2.7,9.8,9.8V67.9c0,3.5-.2,4.6-1,6.3a7.6,7.6,0,0,1-13.2,0c-.9-1.8-1-2.6-1-6.3V23.8Z" fill="#555"/><path d="M1196.1,56.9c0,12.7-10.2,21.8-24.5,21.8S1147,69.6,1147,56.9c0-7.2,2.7-12.1,9.3-16.5-4.7-4.4-6.3-7.7-6.3-13,0-11.1,8.8-18.8,21.6-18.8s21.5,7.7,21.5,18.8c0,5.3-1.6,8.6-6.3,13C1193.4,44.8,1196.1,49.7,1196.1,56.9Zm-33.4-2a8.9,8.9,0,1,0,9-8.8A8.9,8.9,0,0,0,1162.7,54.9Zm2.1-26.6a6.8,6.8,0,1,0,6.9-6.7A6.7,6.7,0,0,0,1164.8,28.3Z" fill="#555"/>
+          <title>copyright2020</title>
+          <style type="text/css">
+          	.st0{fill:#575757;}
+          </style>
+          <path class="st0" d="M69.3,43.7c-0.1,19.2-15.7,34.6-34.9,34.5C15.2,78.1-0.2,62.5-0.1,43.3S15.6,8.7,34.8,8.8c0.1,0,0.3,0,0.4,0
+          	C53.8,8.8,69.3,24.6,69.3,43.7z M7.5,43.7c0,15.4,12.3,28,27.3,28s27.1-12.6,27.1-28S49.8,15.6,35.2,15.6S7.5,27.9,7.5,43.7z
+          	 M49.1,29.8c0.1,2.2-1.5,4-3.7,4.1c-0.1,0-0.2,0-0.3,0c-1.2-0.1-2.3-0.4-3.4-0.9c-1.5-0.6-3-0.9-4.6-0.9c-6.1,0-9.6,4.2-9.6,11.4
+          	s3.6,11.1,9.7,11.1c2.2,0,2.2,0,6.2-1.7c0.7-0.3,1.4-0.5,2.1-0.5c2.3,0.1,4.1,1.9,4,4.2c0,0,0,0.1,0,0.1c0,3.8-5.2,6.6-12.3,6.6
+          	c-12,0-20-8-20-20.1S25.4,23.4,37,23.4C44.3,23.4,49.1,26,49.1,29.8z"/>
+          <path class="st0" d="M164.4,19.4c0,4-2.6,6.8-6.2,6.8c-1.5,0-2.5-0.3-5.6-1.6c-2.5-1.2-5.2-1.7-8-1.7c-10.5,0-16.8,7.8-16.8,20.9
+          	s6.3,20.6,16.9,20.6c3.8,0,3.8,0,10.6-3.1c1.1-0.5,2.2-0.8,3.4-0.8c3.4,0,6.2,3.2,6.2,7c0,6.5-8.5,11.2-20.2,11.2
+          	c-20.1,0-33.3-14-33.3-35.3S125,8.6,144.5,8.6C156.4,8.6,164.4,13,164.4,19.4z"/>
+          <path class="st0" d="M187.9,56.5c2.2,5.9,5.9,8.7,11.7,8.7c3.5,0,4.4-0.3,12.1-4.1c1-0.4,2.1-0.7,3.2-0.7c3.2,0.2,5.8,2.8,5.9,6
+          	c0,6-10.7,11.6-22,11.6c-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1s24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8L187.9,56.5z
+          	 M207.2,46.5c-0.4-1.9-1.1-3.7-2.1-5.4c-1.7-2.4-4.5-3.8-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2H207.2z"/>
+          <path class="st0" d="M267.8,28.3c2.5,1.3,4,3.9,4.1,6.7c0,3.6-2.6,6.6-5.8,6.6c-1.3,0-1.7-0.1-5.3-1.5c-1.7-0.7-3.5-1.1-5.3-1.1
+          	c-6.3,0-10.8,5.3-10.8,12.7s4.5,12.6,11.2,12.6c2-0.1,4-0.5,5.8-1.4c2.5-1.2,2.9-1.3,4.2-1.3c3.4,0,6.1,2.9,6.1,6.7
+          	c-0.1,2.1-1.1,4.1-2.8,5.4c-3.5,2.6-9.2,4.3-14.7,4.3c-6.8,0.2-13.2-2.6-17.8-7.6c-4.7-5.1-6.7-10.7-6.7-18.9s2.7-15,7.6-19.4
+          	c4.8-4.3,11-6.7,17.5-6.8C259.5,25.3,263.9,26.3,267.8,28.3z"/>
+          <path class="st0" d="M300.4,12.2c0.5,4.7-2.9,9-7.6,9.5c-4.7,0.5-9-2.9-9.5-7.6c-0.1-0.6-0.1-1.2,0-1.9c0.5-4.7,4.8-8.1,9.5-7.6
+          	C296.8,5,300,8.2,300.4,12.2z M284.4,35.4c0-3.5,0.1-4.4,1-6.1c2-3.5,6.4-4.7,10-2.7c1.1,0.7,2.1,1.6,2.7,2.7c0.9,1.7,1,2.5,1,6.1
+          	v32.5c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V35.4z"/>
+          <path class="st0" d="M328.7,67.9c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V13.4
+          	c0-3.5,0.1-4.4,1-6c1.3-2.3,3.7-3.7,6.4-3.7c2.6,0,5,1.4,6.3,3.6c0.9,1.7,1,2.5,1,6.1L328.7,67.9z"/>
+          <path class="st0" d="M359.4,12.2c0.5,4.7-2.9,9-7.6,9.5c-4.7,0.5-9-2.9-9.5-7.6c-0.1-0.6-0.1-1.2,0-1.9c0.5-4.7,4.8-8.1,9.5-7.6
+          	C355.8,5,359,8.2,359.4,12.2z M343.4,35.4c0-3.5,0.1-4.4,1-6.1c2-3.5,6.4-4.7,10-2.7c1.1,0.7,2.1,1.6,2.7,2.7c0.9,1.7,1,2.5,1,6.1
+          	v32.5c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V35.4z"/>
+          <path class="st0" d="M420.5,69c0,5.2-3,8.7-7.4,8.7s-5.9-1.9-7.4-5.8C402,76.5,399,78,393.6,78c-5.4,0-10.5-2-14.5-5.6
+          	c-5.8-5.1-8.7-12.1-8.7-21c0-8.1,2.4-14.2,7.7-19.4c4-4.2,9.5-6.6,15.3-6.7c5.2,0,8.3,1.5,12.5,5.8c1.6-3.9,3.8-5.5,7.3-5.5
+          	c4,0,7.3,3.3,7.3,7.3c0,0.1,0,0.1,0,0.2L420.5,69z M385.1,51.5c0,7.7,4,12.8,10.2,12.8s10.1-5.2,10.1-12.7S401.3,39,395.2,39
+          	S385.1,44.1,385.1,51.5z"/>
+          <path class="st0" d="M489.3,10.3c6.4,0,10.3,1.2,13.8,4.2c3.6,3.1,5.7,7.7,5.6,12.5c0,6.1-2.2,9.8-7.9,13.3c4.2,1.2,6.1,2.2,8.4,4.2
+          	c3.6,3.2,5.6,7.9,5.4,12.7c0,11.2-8.9,19.8-20.5,19.8h-18.2c-8,0.4-11.5-3.1-11.1-11.1V21.4c0-4.7,0.3-5.9,1.6-7.7s4.1-3.4,7.6-3.4
+          	C474,10.3,489.3,10.3,489.3,10.3z M487.7,35.7c3.4,0.2,6.3-2.5,6.5-5.9c0-0.2,0-0.3,0-0.5c0-3.3-3-5.7-7.1-5.7h-7v12.1H487.7z
+          	 M490.7,63.7c3.4,0,4.9-0.5,6.3-2.2c1.1-1.3,1.7-3,1.7-4.8c0-4.9-2.8-7.3-8.4-7.3h-10.2v14.3H490.7z"/>
+          <path class="st0" d="M540.5,67.9c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V13.4
+          	c0-3.5,0.1-4.4,1-6c1.3-2.3,3.7-3.7,6.4-3.7c2.6,0,5,1.4,6.3,3.6c0.9,1.7,1,2.5,1,6.1V67.9z"/>
+          <path class="st0" d="M567.3,56.5c2.2,5.9,5.9,8.7,11.7,8.7c3.5,0,4.4-0.3,12.1-4.1c1-0.4,2.1-0.7,3.2-0.7c3.2,0.2,5.8,2.8,5.9,6
+          	c0,6-10.7,11.6-22,11.6c-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1s24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8L567.3,56.5z
+          	 M586.6,46.5c-0.4-1.9-1.1-3.7-2.1-5.4c-1.7-2.4-4.5-3.8-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2H586.6z"/>
+          <path class="st0" d="M646.9,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2c-1.7-0.9-3.7-1.4-5.6-1.5c-2.4,0-3.9,1-3.9,2.6
+          	s0.8,2.4,7.7,5.1s8.6,3.8,11.2,6.4c2.3,2.5,3.6,5.8,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4c-10,0-18.8-5-18.8-10.6c0-3.4,3-6.6,6.1-6.6
+          	s1.7,0,7.6,2.6c1.8,0.9,3.8,1.5,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6
+          	c0-9.1,8.1-15.9,18.9-15.9C639.1,25.3,646.9,30,646.9,35.4z"/>
+          <path class="st0" d="M691.3,63.7c3.2,0,4,0.1,5.6,0.9c2,1.2,3.3,3.3,3.3,5.7c0,2.4-1.3,4.6-3.3,5.8c-1.6,0.8-2.3,0.9-5.6,0.9H663
+          	c-5.1,0-7.6-1.7-7.6-5c0-1.6,0.6-3.2,1.7-4.4l20.5-28h-13.2c-3.2,0-4-0.1-5.5-0.9c-2.1-1.2-3.4-3.4-3.4-5.8c0-2.3,1.3-4.5,3.3-5.7
+          	c1.6-0.8,2.3-0.9,5.6-0.9h28.3c3.4,0,6,2.3,6,5.3c-0.1,1.9-0.8,3.7-2,5.1l-19.8,27L691.3,63.7z"/>
+          <path class="st0" d="M738.9,32.6c2-5.2,4-7,7.8-7c4-0.1,7.3,3.1,7.5,7.1c0,1.8-0.2,2.4-1.5,5.6l-22.3,53.4c-2.2,5.1-4,6.7-7.8,6.7
+          	c-3.9,0-7.1-3.1-7.3-7c0-1.7,0.2-2.3,1.5-5.5l5.8-13.5l-14.5-34.3c-1.3-3-1.5-3.8-1.5-5.5c0.2-4,3.4-7.1,7.4-7
+          	c3.7,0,5.6,1.7,7.7,6.9l8.6,21.8L738.9,32.6z"/>
+          <path class="st0" d="M764.6,34.2c0-5.2,3-8.6,7.5-8.6s5.4,1.5,6.8,5.1c4.3-4,7.8-5.4,13.5-5.4c4.7-0.1,9.2,1.4,12.8,4.4
+          	c3.9,3.5,5.3,7.1,5.3,14.1v24.1c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V47.3
+          	c0-5.7-3.2-9.3-8.2-9.3c-4.6,0.1-8.4,3.9-8.3,8.5c0,0.1,0,0.1,0,0.2v21.2c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7
+          	c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1L764.6,34.2z"/>
+          <path class="st0" d="M859.6,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2c-1.7-0.9-3.7-1.4-5.6-1.5c-2.4,0-3.9,1-3.9,2.6
+          	s0.8,2.4,7.7,5.1s8.6,3.8,11.2,6.4c2.3,2.5,3.6,5.8,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4c-10,0-18.8-5-18.8-10.6c0-3.4,3-6.6,6.1-6.6
+          	s1.7,0,7.6,2.6c1.8,0.9,3.8,1.5,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6
+          	c0-9.1,8.1-15.9,18.9-15.9C851.8,25.3,859.6,30,859.6,35.4z"/>
+          <path class="st0" d="M887.1,67.9c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V13.4
+          	c0-3.5,0.1-4.4,1-6.1c2-3.5,6.4-4.7,10-2.7c1.1,0.7,2.1,1.6,2.7,2.7c0.9,1.7,1,2.5,1,6.1v29.5l13.5-13.8c2.9-3,4.4-3.8,6.7-3.8
+          	c4,0,7.2,3.2,7.2,7.2c0,0,0,0.1,0,0.1c0,2.2-0.9,3.7-4,6.6l-9.1,8.8l12.8,15.9c2.5,3.1,3.2,4.5,3.2,6.5c-0.1,4.1-3.4,7.4-7.5,7.3
+          	c0,0,0,0,0,0c-2.7,0-4.3-1.1-7.1-4.7l-15.7-20.1V67.9z"/>
+          <path class="st0" d="M943.9,12.2c0.5,4.7-2.9,9-7.6,9.5c-4.7,0.5-9-2.9-9.5-7.6c-0.1-0.6-0.1-1.2,0-1.9c0.5-4.7,4.8-8.1,9.5-7.6
+          	C940.3,5,943.5,8.2,943.9,12.2z M927.9,35.4c0-3.5,0.1-4.4,1-6.1c2-3.5,6.4-4.7,10-2.7c1.1,0.7,2.1,1.6,2.7,2.7c0.9,1.7,1,2.5,1,6.1
+          	v32.5c0,3.5-0.1,4.4-1,6.1c-2,3.5-6.4,4.7-10,2.7c-1.1-0.7-2.1-1.6-2.7-2.7c-0.9-1.7-1-2.5-1-6.1V35.4z"/>
+          <g>
+          	<path class="st0" d="M1020.2,63c3.1,0,3.9,0.1,5.4,0.9c2,1,3.3,3.3,3.3,5.7c0,2.4-1.4,4.8-3.2,5.8c-1.6,0.8-2.2,0.9-5.5,0.9h-28
+          		c-3.5,0-5.1-0.5-6.5-2.1c-1.2-1.2-1.8-2.6-1.8-4.2c0-2.3,1-4,4-7.3c3.3-3.5,16.3-18.6,18.5-21.3c4.3-5.7,5.9-8.8,5.9-11.9
+          		c0-3.7-2.7-6.4-6.2-6.4c-3.4,0-6,2.3-7.1,6.6c-1.3,4.5-1.6,5.4-2.6,6.4c-1.1,1.3-2.5,1.9-4.5,1.9c-4.1,0-6.8-2.9-6.8-7.3
+          		c0-11.4,10.1-21.2,22-21.2c11.7,0,20.7,8.5,20.7,19.7c0,6.6-2.2,11.8-8.5,19.5c-4.2,5.2-8.4,9.9-13,14.4H1020.2z"/>
+          	<path class="st0" d="M1084.5,43.6c0,19.8-10.2,34.3-24.1,34.3c-5.8,0-11.9-2.9-16-7.6c-5.5-6.3-8-14.8-8-27.1c0-11,2.7-20,8-26.1
+          		c4.1-4.7,10.3-7.6,15.9-7.6C1074.4,9.4,1084.5,23.8,1084.5,43.6z M1051.7,43.4c0,12.5,3.2,19.8,8.8,19.8c5.1,0,8.7-8.2,8.7-19.6
+          		c0-11.3-3.6-19.5-8.7-19.5C1055,24.1,1051.7,31.4,1051.7,43.4z"/>
+          	<path class="st0" d="M1128.3,63c3.1,0,3.9,0.1,5.4,0.9c2,1,3.3,3.3,3.3,5.7c0,2.4-1.4,4.8-3.2,5.8c-1.6,0.8-2.2,0.9-5.5,0.9h-28
+          		c-3.5,0-5.1-0.5-6.5-2.1c-1.2-1.2-1.8-2.6-1.8-4.2c0-2.3,1-4,4-7.3c3.3-3.5,16.3-18.6,18.5-21.3c4.3-5.7,5.9-8.8,5.9-11.9
+          		c0-3.7-2.7-6.4-6.2-6.4c-3.4,0-6,2.3-7.1,6.6c-1.3,4.5-1.6,5.4-2.6,6.4c-1.1,1.3-2.5,1.9-4.5,1.9c-4.1,0-6.8-2.9-6.8-7.3
+          		c0-11.4,10.1-21.2,22-21.2c11.7,0,20.7,8.5,20.7,19.7c0,6.6-2.2,11.8-8.5,19.5c-4.2,5.2-8.4,9.9-13,14.4H1128.3z"/>
+          	<path class="st0" d="M1192.6,43.6c0,19.8-10.2,34.3-24.1,34.3c-5.8,0-11.9-2.9-16-7.6c-5.5-6.3-8-14.8-8-27.1c0-11,2.7-20,8-26.1
+          		c4.1-4.7,10.3-7.6,15.9-7.6C1182.5,9.4,1192.6,23.8,1192.6,43.6z M1159.8,43.4c0,12.5,3.2,19.8,8.8,19.8c5.1,0,8.7-8.2,8.7-19.6
+          		c0-11.3-3.6-19.5-8.7-19.5C1163.1,24.1,1159.8,31.4,1159.8,43.4z"/>
+          </g>
+          <path class="st0" d="M1020.2,63c3.1,0,3.9,0.1,5.4,0.9c2,1,3.3,3.3,3.3,5.7c0,2.4-1.4,4.8-3.2,5.8c-1.6,0.8-2.2,0.9-5.5,0.9h-28
+          	c-3.5,0-5.1-0.5-6.5-2.1c-1.2-1.2-1.8-2.6-1.8-4.2c0-2.3,1-4,4-7.3c3.3-3.5,16.3-18.6,18.5-21.3c4.3-5.7,5.9-8.8,5.9-11.9
+          	c0-3.7-2.7-6.4-6.2-6.4c-3.4,0-6,2.3-7.1,6.6c-1.3,4.5-1.6,5.4-2.6,6.4c-1.1,1.3-2.5,1.9-4.5,1.9c-4.1,0-6.8-2.9-6.8-7.3
+          	c0-11.4,10.1-21.2,22-21.2c11.7,0,20.7,8.5,20.7,19.7c0,6.6-2.2,11.8-8.5,19.5c-4.2,5.2-8.4,9.9-13,14.4H1020.2z"/>
+          <path class="st0" d="M1084.5,43.6c0,19.8-10.2,34.3-24.1,34.3c-5.8,0-11.9-2.9-16-7.6c-5.5-6.3-8-14.8-8-27.1c0-11,2.7-20,8-26.1
+          	c4.1-4.7,10.3-7.6,15.9-7.6C1074.4,9.4,1084.5,23.8,1084.5,43.6z M1051.7,43.4c0,12.5,3.2,19.8,8.8,19.8c5.1,0,8.7-8.2,8.7-19.6
+          	c0-11.3-3.6-19.5-8.7-19.5C1055,24.1,1051.7,31.4,1051.7,43.4z"/>
+          <path class="st0" d="M1128.3,63c3.1,0,3.9,0.1,5.4,0.9c2,1,3.3,3.3,3.3,5.7c0,2.4-1.4,4.8-3.2,5.8c-1.6,0.8-2.2,0.9-5.5,0.9h-28
+          	c-3.5,0-5.1-0.5-6.5-2.1c-1.2-1.2-1.8-2.6-1.8-4.2c0-2.3,1-4,4-7.3c3.3-3.5,16.3-18.6,18.5-21.3c4.3-5.7,5.9-8.8,5.9-11.9
+          	c0-3.7-2.7-6.4-6.2-6.4c-3.4,0-6,2.3-7.1,6.6c-1.3,4.5-1.6,5.4-2.6,6.4c-1.1,1.3-2.5,1.9-4.5,1.9c-4.1,0-6.8-2.9-6.8-7.3
+          	c0-11.4,10.1-21.2,22-21.2c11.7,0,20.7,8.5,20.7,19.7c0,6.6-2.2,11.8-8.5,19.5c-4.2,5.2-8.4,9.9-13,14.4H1128.3z"/>
+          <path class="st0" d="M1192.6,43.6c0,19.8-10.2,34.3-24.1,34.3c-5.8,0-11.9-2.9-16-7.6c-5.5-6.3-8-14.8-8-27.1c0-11,2.7-20,8-26.1
+          	c4.1-4.7,10.3-7.6,15.9-7.6C1182.5,9.4,1192.6,23.8,1192.6,43.6z M1159.8,43.4c0,12.5,3.2,19.8,8.8,19.8c5.1,0,8.7-8.2,8.7-19.6
+          	c0-11.3-3.6-19.5-8.7-19.5C1163.1,24.1,1159.8,31.4,1159.8,43.4z"/>
         </svg>
       </div>
     </div>
