--- a/css/theme.css
+++ b/css/theme.css
@@ -129,6 +129,11 @@ strong {
   border-radius: 40px 40px 0px 0px;
 }
 
+.margin-top-right {
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
 .nav ul {
   color: white;
   margin: 0;
