--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,10 +1,11 @@
-<div class="island-1-4 unit [ xs-1 s-1 m-1-3 l-1-4 ]">
+<div class="island-1-2 unit [ xs-1 s-1-2 m-1-3 l-1-4 ]">
   <div class="card">
-    <div class="card-img embed">
+    <div class="container-card embed">
 
-      <img class="img-flex" src="{{site.baseurl}}/images/{{include.data.preview}}" alt="">
+      <img class="card-img img-flex" src="{{site.baseurl}}/images/{{include.data.preview}}" alt="">
       <a href="{{site.baseurl}}{{include.data.url}}" class="pin-b-r gradient embed-item embed-4-by-3comp content-fill">
-        <div class="zindex-3 title push-0 vertical-align align-center">
+        <div class="pad-t-2 zindex-3 push-0 ">
+          <h6 class="card-text img-flex" alt="Title">{{include.data.title}}</h6>
         </div>
       </a>
 
